--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 }
 
 #container_all {
+    line-height: 1.4;
     background:
         linear-gradient(rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0.7)),
